--- a/periscope-web/src/main/webapp/pages/project/harmonization/inventorsHarmonization.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/inventorsHarmonization.xhtml
@@ -1,19 +1,36 @@
 <?xml version='1.0' encoding='utf-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
 <f:view contentType="text/html">
 	<h:form id="formAl">
-		<p:dataTable id="applicants" var="pa" style="font-size:12px"
+		<p:dataTable id="inventors" var="pa" style="font-size:12px"
 					emptyMessage="#{msgs['no.inventors']}"
 					value="#{inventorHarmonizationController.inventors}" paginator="true"
 					paginatorAlwaysVisible="false" paginatorPosition="bottom" rows="10"
 					rowKey="#{pa.name}" filterEvent="enter" lazy="true">
-	
+               
+               <f:facet name="header">
+                    <h:panelGrid columns="4" style="width: 20%" cellpadding="5">  
+                        <p:column>
+                            <p:outputLabel value="#{msgs['filter.type']}"/>  
+                        </p:column>
+                        <p:column>
+                            <p:selectOneMenu id="searchType" value="#{inventorHarmonizationController.searchType}">
+                                <f:selectItem itemLabel="#{msgs['start.with']}" itemValue="1"/>
+                                <f:selectItem itemLabel="#{msgs['contains']}" itemValue="2"/>  
+                                <p:ajax event="change" update="inventors"/>
+                            </p:selectOneMenu>
+                        </p:column>
+                        <p:column/>
+                        <p:column/>
+                    </h:panelGrid>
+               </f:facet>
+                    
 
 	
                     <p:column headerText="">					
