--- a/periscope-web/src/main/webapp/pages/project/report/allReports/natureApplicant.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/natureApplicant.xhtml
@@ -34,7 +34,7 @@
                         <h:outputText value="#{pair.key}" />
                     </p:column>
 
-                    <p:column headerText="#{msgs['documents.number']}">
+                    <p:column headerText="#{msgs['applicants.number']}">
                         <h:outputText value="#{pair.value}" />
                     </p:column>
 
