--- a/periscope-web/src/main/webapp/pages/project/harmonization/applicantHarmonization.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/applicantHarmonization.xhtml
@@ -66,7 +66,7 @@
                 <p:column headerText="#{msgs['name']}" sortBy="#{pa.name}" filterBy="#{pa.name}">														
                     #{pa.name}					
                 </p:column>
-                <p:column headerText="#{msgs['acronym']}">	
+                <p:column headerText="#{msgs['acronym']}" filterBy="#{pa.acronym}">	
                     #{pa.acronym}					
                 </p:column>
                 <p:column headerText="#{msgs['country']}" sortBy="#{pa.country.name}">														
