Adicionado o botão de retirar depositantes ou inventores na tabela de selecionados

--- a/periscope-web/src/main/webapp/pages/project/harmonization/applicantHarmonization.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/applicantHarmonization.xhtml
@@ -99,7 +99,8 @@
                         <p:column rowspan="2" headerText="#{msgs['name']}" sortBy="#{pa.name}"/>
                         <p:column rowspan="2" headerText="#{msgs['acronym']}" />
                         <p:column rowspan="2" headerText="#{msgs['country']}" />
-                        <p:column rowspan="2" headerText="Docs" sortBy="#{pa.documentCount}"/>				
+                        <p:column rowspan="2" headerText="Docs" sortBy="#{pa.documentCount}"/>
+                        <p:column style="width: 5px"/>
                     </p:row>
                 </p:columnGroup>		
                 <p:column>														
@@ -114,6 +115,13 @@
                 <p:column>														
                     #{pa.documentCount}					
                 </p:column>		
+                <p:column>
+                    <p:commandButton icon="ui-icon-closethick" action="#{applicantHarmonizationController.unselect(pa)}"
+                                     update = ":tabView:formAll:applicants,:tabView:formAll:selectedApplicants,:#{p:component('panelSugestions')}"
+                                     ajax="true"
+                                     
+                                     />
+                </p:column> 
             </p:dataTable>
 
             <p:commandLink value="#{msgs['new.rule']}"  update="applicantSugestions" oncomplete="sugestionsDialog.show()"
