Consertado o bug de mandar patentes para a lista negra, arrumado o layout na listagem de patentes.

--- a/periscope-web/src/main/webapp/pages/project/patent/patentList.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/patent/patentList.xhtml
@@ -23,6 +23,8 @@
                     </ul>
                     
 
+                    <br  clear="left"/>
+                    
                     <p:dataTable id="patents" var="item" style="font-size:10px"
                                  emptyMessage="#{msgs['registered.patent']}"
                                  value="#{patentController.patents}" paginator="true"
