Adicionar patente e corrigido o nome do menu "Depositantes por data"

--- a/periscope-web/src/main/webapp/pages/project/project.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/project.xhtml
@@ -75,7 +75,7 @@
                         </h:panelGroup>
                         <p:panel toggleOrientation="vertical">
                             <h4>#{msgs['help']}</h4>
-                            <p:accordionPanel activeIndex="">
+                            <p:accordionPanel activeIndex="" >
                                 <p:tab title="#{msgs['projects']}">
                                     <p:accordionPanel activeIndex="">
                                         <p:tab title="#{msgs['privados']}">
@@ -96,7 +96,7 @@
                                     </p:accordionPanel>
                                 </p:tab>
                                 <p:tab title="#{msgs['users']}">
-                                    <p:outputLabel>#{msgs['user.info']}</p:outputLabel>
+                                    <p:outputLabel>#{msgs['users.info']}</p:outputLabel>
                                 </p:tab>
                             </p:accordionPanel>
                         </p:panel>
